#2469 Review suggestions: - using Map.of()
Signed-off-by: Florian Kaltner <florian.kaltner@bosch.io>